cart optimization - checkout route added
